# rust-web-bookmanager

./: .dockerignore  .env  Cargo.toml  Dockerfile  Dockerfile.Chef  Dockerfile.Sample  Makefile.sample.toml  Makefile.toml  README.md  commit.md  compose.yaml  migrate.ps1  patch.diff  patch.py  patch_auth_timing.diff  pr.txt  pr_description.txt  sql_test.sh
.cargo/: audit.toml  config.toml
.github/workflows/: autofix-ci.yaml  ci.yaml  deploy_app.yaml  frontend_ci.yaml
adapter/: Cargo.toml  Cargo.toml.orig  README.md
adapter/migrations/: 20250315131114_start.down.sql  20250315131114_start.up.sql
adapter/seeds/: initial_setup.sql
adapter/src/database/: mod.rs
adapter/src/database/model/: auth.rs  book.rs  checkout.rs  user.rs
adapter/src/redis/: mod.rs  model.rs
adapter/src/repository/: auth.rs  book.rs  checkout.rs  user.rs
adapter/src/repository/fixtures/: common.sql
api/: Cargo.toml  README.md
api/src/: extractor.rs  lib.rs  openapi.rs
api/src/handler/: auth.rs  book.rs  checkout.rs  health.rs  user.rs
api/src/model/: auth.rs  book.rs  checkout.rs  user.rs
api/src/route/: book.rs  health.rs  user.rs  v1.rs
api/tests/api/: book.rs  health.rs  helper.rs  main.rs  user.rs
doc/: er.md
frontend/: Dockerfile  README.md  eslint.config.mjs  next.config.js  package-lock.json  package.json  sample.env.local
frontend/app/: page.tsx
frontend/app/_components/: AddUserButton.tsx  CheckoutButton.tsx  CheckoutHistory.tsx  DeleteUserButton.tsx  Header.tsx  ReturnButton.tsx  UpdateUserRoleSelector.tsx  auth.ts
frontend/app/_contexts/: book.ts  checkout.ts  user.ts
frontend/app/_lib/: client.ts
frontend/app/books/[id]/: page.tsx
frontend/app/books/checkouts/: page.tsx
frontend/app/books/create/: page.tsx
frontend/app/login/: page.tsx
frontend/app/users/: page.tsx
frontend/app/users/password/: page.tsx
infra/: .terraform.lock.hcl  main.tf
kernel/: Cargo.toml  README.md
kernel/src/model/: id.rs  list.rs
kernel/src/model/auth/: event.rs  mod.rs
kernel/src/model/book/: event.rs  mod.rs
kernel/src/repository/: auth.rs  book.rs  checkout.rs
registry/: Cargo.toml  README.md
registry/src/: lib.rs
shared/: Cargo.toml  README.md
shared/src/: config.rs  env.rs  error.rs
src/: main.rs
(+5 files in other folders)
