[package]
name = "adapter"
version = "0.1.0"
edition = "2021"

[lib]
name = "adapter"
path = "src/lib.rs"

[dependencies]
kernel.workspace = true
shared.workspace = true
async-trait.workspace = true
derive-new.workspace = true
anyhow.workspace = true
sqlx.workspace = true

[package.metadata.cargo-machete]
ignored = ["anyhow"]