[package]
name = "api"
version = "0.1.0"
edition = "2021"

[lib]
name = "api"
path = "src/lib.rs"

[dependencies]
kernel.workspace = true
registry.workspace = true
# shared.workspace = true
axum.workspace = true
derive-new.workspace = true
serde.workspace = true
anyhow.workspace = true
uuid.workspace = true
thiserror.workspace = true